# hunt

./: .gitignore  Cargo.toml
src/: main.rs  rest.rs
src/rest/: grammar.pest  method.rs  parser.rs  request.rs  response.rs  restfile.rs
static/: style.css
templates/: base.html  index.html
