[package]
name = "hunt"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2"
pest_derive = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
axum = {version = "0.6", features = ["headers"]}
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
structopt = { version = "0.3", default-features = false }
tera = "1.19.0"
